java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable10-hints.pass
Create Field foo in org.netbeans.test.java.hints.CreateLocalVariable10
Create Parameter foo
Create Local Variable foo
